# mp-dwh

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: booking_events.json  mentor_tiers.csv  users_db_export.csv
src/: ingest.py  workflow.py
transformer/: dbt_project.yml  profiles.yml
transformer/models/: sources.yml
transformer/models/marts/: dim_mentors.sql  dim_users.sql  fct_booking_sessions.sql  fct_mentoring_sessions.sql  schema.yml
transformer/models/reports/: rpt_rebooking_b.sql  rpt_rebooking_m.sql  schema.yml
transformer/models/staging/: schema.yml  stg_events.sql  stg_mentors.sql  stg_users.sql
transformer/tests/: test_dormant_users.sql  test_negative_duration.sql  test_orphan_rate.sql  test_session_sequence.sql  test_users_wo_sessions.sql
